--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>River Plate</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>    
         <div class = "headerDiv">
             <a class="titles"  href="index.html">
                 <div>
-                    <img width="64" src="/img/CARP.png" alt="escudo_river_plate">
+                    <img width="64" src="./img/CARP.png" alt="escudo_river_plate">
                    <h1><b>RIVER PLATE</b></h1>
                 </div>
             </a>
@@ -38,14 +38,14 @@
                         Identificado por sus colores blanco, rojo y en menor escala negro, River Plate es uno de los clubes más exitosos del mundo con un total de 72 títulos en su palmarés. Es el club más ganador de la Primera División de Argentina, con 38 campeonatos conseguidos. También es el segundo club más ganador de copas nacionales con 16 títulos. Es el segundo club más ganador de la Copa Argentina con tres títulos y el más ganador de la Supercopa Argentina y el Trofeo de Campeones de la Liga Profesional. Ostenta el récord de ser el club más ganador del fútbol argentino desde su profesionalización en 1931 sumando 69 títulos oficiales.
                     </b></p>
                     
-                    <img src="/img/messi_river.jpg" alt="Messi con remera de river">
+                    <img src="./img/messi_river.jpg" alt="Messi con remera de river">
 
                 </div>
             </section> 
 
             <section class = mainSection2>
                 <div class="sectionDiv2">
-                    <img src="/img/River campeon 2018.avif" alt="River levantando la copa 2018">
+                    <img src="./img/River campeon 2018.avif" alt="River levantando la copa 2018">
 
                     <p><b>
                         Es el tercer club más laureado en el continente americano —junto con el São Paulo F. C.— sumando 12 conquistas internacionales a nivel confederativo e interconfederativo y llega a la suma de 18 trofeos contabilizado las extintas copas organizadas por la AFA y la AUF como la Cup Tie Competition y la Copa Aldao, siendo el máximo ganador de este último certamen internacional con cinco conquistas. Fue el primer equipo argentino en conseguir la triple corona —tras ganar el campeonato, la Copa Libertadores y la Copa Intercontinental en 1986—. Además, en 2015 se convirtió en el único club sudamericano en ganar las tres competiciones de Conmebol durante un mismo año.
@@ -73,7 +73,7 @@
 
                     </div>
                     <div class="imgDiv">
-                        <img class="historyImg" src="/img/River_Campeón_1908.jpeg" alt="River campeon 1908">
+                        <img class="historyImg" src="./img/River_Campeón_1908.jpeg" alt="River campeon 1908">
                     </div>
                     
                 </div>
@@ -84,7 +84,7 @@
                 <div class="historySectionDiv">
 
                     <div class="imgDiv">
-                        <img class="historyImg" src="/img/la maquina river.jpg" alt="Foto de la maquinita de la decada del 40">
+                        <img class="historyImg" src="./img/la maquina river.jpg" alt="Foto de la maquinita de la decada del 40">
                     </div>
 
                     <div class="historyTextSectionDiv">
@@ -107,7 +107,7 @@
                     </div>
 
                     <div class="imgDiv">
-                        <img class="smallImg" src="/img/Santilli_abrazo_alonso.jpg" alt="Santilli abrazando a alonso">
+                        <img class="smallImg" src="./img/Santilli_abrazo_alonso.jpg" alt="Santilli abrazando a alonso">
                     </div>
                 </div>
 
@@ -115,7 +115,7 @@
                 <div class="historySectionDiv">
 
                     <div class="imgDiv">
-                        <img class="historyImg" src="/img/River campeon 2018.avif" alt="River campeon 2018">
+                        <img class="historyImg" src="./img/River campeon 2018.avif" alt="River campeon 2018">
                     </div>
 
                     <div class="historyTextSectionDiv">
